submit disabled="disabled" doesn't stop form from being posted with ENTER key https://bugs.webkit.org/show_bug.cgi?id=243594

Reviewed by Aditya Keerthi.

Change the behavior of WebKit to match that of Blink and Gecko by disallowing
implicit submission of a form when the first submit button is disabled.

* LayoutTests/fast/forms/implicit-submission-expected.txt:
* LayoutTests/fast/forms/implicit-submission.html:
* LayoutTests/platform/mac/fast/forms/implicit-submission-expected.txt:
* LayoutTests/platform/win-7sp0/fast/forms/implicit-submission-expected.txt: Removed.
* LayoutTests/platform/win/fast/forms/implicit-submission-expected.txt:

* Source/WebCore/html/HTMLButtonElement.cpp:
(WebCore::HTMLButtonElement::isSuccessfulSubmitButton const): Changed the condition
to be considered as "successful" submit button.
* Source/WebCore/html/HTMLInputElement.cpp:
(WebCore::HTMLInputElement::isSuccessfulSubmitButton const): Ditto.

Canonical link: https://commits.webkit.org/253228@main